get data from db and push out as JSON

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,49 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}">
     <title>Kotlin Spring Sample</title>
 </head>
 <body>
 
 <h1>Model List</h1>
-5555555
+
+<!--
+<table>
+    <tr>
+        <th th:text="#{title.id}">No</th>
+        <th th:text="#{title.name}">Name</th>
+        <th th:text="#{title.price}">Price</th>
+        <th th:text="#{title.type}">Type</th>
+        <th th:text="#{title.note}">Note</th>
+    </tr>
+    <th:block th:each="model : ${modelList}">
+        <tr>
+            <td th:text="${model.id}"></td>
+            <td th:text="${model.name}"></td>
+            <td th:text="${model.price}"></td>
+            <td th:text="${model.type}"></td>
+            <td th:text="${model}"></td>
+        </tr>
+    </th:block>
+</table>
+-->
+<table border=1>
+    <tr>
+        <td>No</td>
+        <td>Name</td>
+        <td>Price</td>
+        <td>Type</td>
+        <td>Note</td>
+    </tr>
+    <th:block th:each="model : ${modelList}">
+        <tr>
+            <td th:text="${model.id}"></td>
+            <td th:text="${model.name}"></td>
+            <td th:text="${model.price}"></td>
+            <td th:text="${model.type}"></td>
+            <td th:text="${model}"></td>
+        </tr>
+    </th:block>
+</table>
 </body>
 </html>
